# qupa_v2

./: .gitignore  README.md  arena_qupas.argos  camara_min.lua  camera_blobs_qupa.lua  move.lua  prueba_bloobs.lua  prueba_bloobs2.lua  qupa_sandbox.argos  qupas_camara.argos  test.argos  test_qupa.argos
arenas/: arena_tams.argos  qupa_sandbox.argos  qupas_camara.argos
codigos/: camera_blobs_qupa.lua  control_soft.lua  control_strategy.lua  log_bloobs1.lua  move.lua  prueba_bloobs.lua  random_walk.lua  sensor_ground.lua
examples/controllers/lua/: apriltag_test_qupa.lua  blobb.lua  camera_blobs_qupa.lua  log_bloobs.lua  obstacle_avoidance.lua  probando.lua  prueba_bloobs.lua  random_walk.lua  sensores_dist.lua
examples/experiments/: arena_qupas.argos  arena_tams.argos  qupa_sandbox.argos  qupas_camara.argos  test.argos  test_qupa.argos
foot-bot/simulator/: dynamics2d_footbot_model.cpp  footbot_entity.cpp  footbot_proximity_default_sensor.cpp  qtopengl_footbot.cpp  qtopengl_footbot.h  qupaMTL.h
qupa/: CMakeLists.txt
qupa/control_interface/: ci_qupa_base_ground_sensor.cpp  ci_qupa_distance_scanner_sensor.cpp  ci_qupa_gripper_actuator.cpp  ci_qupa_gripper_actuator.h  ci_qupa_light_sensor.cpp  ci_qupa_proximity_sensor.h  ci_qupa_turret_actuator.cpp  ci_qupa_turret_actuator.h  ci_qupa_turret_encoder_sensor.cpp  ci_qupa_turret_encoder_sensor.h
qupa/simulator/: dynamics2d_qupa_model.h  pointmass3d_qupa_model.h  qtopengl_qupa.cpp  qtopengl_qupa.h  qupa_base_ground_rotzonly_sensor.cpp  qupa_base_ground_rotzonly_sensor.h  qupa_distance_scanner_default_actuator.h  qupa_distance_scanner_equipped_entity.cpp  qupa_distance_scanner_rotzonly_sensor.cpp  qupa_distance_scanner_rotzonly_sensor.h  qupa_entity.cpp  qupa_entity.h  qupa_gripper_default_actuator.cpp  qupa_gripper_default_actuator.h  qupa_light_rotzonly_sensor.cpp  qupa_light_rotzonly_sensor.h  qupa_motor_ground_rotzonly_sensor.cpp  qupa_motor_ground_rotzonly_sensor.h  qupa_turret_default_actuator.h  qupa_turret_encoder_default_sensor.cpp  qupa_turret_encoder_default_sensor.h  qupa_turret_entity.h
src/: CMakeLists.txt
src/control_interface/: ci_qupa_base_ground_sensor.cpp  ci_qupa_base_ground_sensor.h  ci_qupa_distance_scanner_actuator.cpp  ci_qupa_distance_scanner_actuator.h  ci_qupa_distance_scanner_sensor.h  ci_qupa_encoder_sensor.cpp  ci_qupa_encoder_sensor.h  ci_qupa_gripper_actuator.cpp  ci_qupa_gripper_actuator.h  ci_qupa_light_sensor.cpp  ci_qupa_light_sensor.h  ci_qupa_motor_ground_sensor.cpp  ci_qupa_motor_ground_sensor.h  ci_qupa_proximity_sensor.cpp  ci_qupa_turret_actuator.cpp
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/qupa/: CMakeLists.txt
src/plugins/robots/qupa/control_interface/: ci_qupa_base_ground_sensor.h  ci_qupa_distance_scanner_sensor.cpp  ci_qupa_motor_ground_sensor.cpp  ci_qupa_proximity_sensor.cpp  ci_qupa_proximity_sensor.h  ci_qupa_turret_actuator.h  ci_qupa_turret_encoder_sensor.cpp  ci_qupa_turret_encoder_sensor.h
src/plugins/robots/qupa/simulator/: dynamics2d_qupa_model.cpp  dynamics2d_qupa_model.h  pointmass3d_qupa_model.h  qtopengl_qupa.cpp  qtopengl_qupa.h  qupa_distance_scanner_default_actuator.cpp  qupa_distance_scanner_default_actuator.h  qupa_distance_scanner_rotzonly_sensor.cpp  qupa_distance_scanner_rotzonly_sensor.h  qupa_entity.cpp  qupa_entity.h  qupa_motor_ground_rotzonly_sensor.cpp  qupa_turret_default_actuator.cpp  qupa_turret_default_actuator.h  qupa_turret_encoder_default_sensor.cpp  qupa_turret_encoder_default_sensor.h  qupa_turret_entity.cpp
src/plugins/robots/qupa/simulator/models/: qupa.mtl
src/simulator/: dynamics2d_qupa_model.cpp  pointmass3d_qupa_model.cpp  qtopengl_qupa.cpp  qtopengl_qupa.h  qupa_base_ground_rotzonly_sensor.cpp  qupa_base_ground_rotzonly_sensor.h  qupa_distance_scanner_default_actuator.cpp  qupa_distance_scanner_equipped_entity.cpp  qupa_distance_scanner_equipped_entity.h  qupa_distance_scanner_rotzonly_sensor.cpp  qupa_distance_scanner_rotzonly_sensor.h  qupa_entity.cpp  qupa_entity.h  qupa_gripper_default_actuator.cpp  qupa_gripper_default_actuator.h  qupa_light_rotzonly_sensor.cpp  qupa_light_rotzonly_sensor.h  qupa_motor_ground_rotzonly_sensor.cpp  qupa_motor_ground_rotzonly_sensor.h  qupa_proximity_default_sensor.cpp  qupa_proximity_default_sensor.h  qupa_turret_default_actuator.cpp  qupa_turret_default_actuator.h  qupa_turret_encoder_default_sensor.cpp  qupa_turret_encoder_default_sensor.h  qupa_turret_entity.cpp  qupa_turret_entity.h
